fix overflow

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 
         width: 100vw;
     }
+    .display{
+        font-size: 1rem;
+    }
 }
 
 
@@ -33,7 +36,7 @@
     /* background-color: black;
     color: white; */
     box-sizing: border-box;
-    overflow-x: auto;
+    overflow-x: auto !important;
     overflow-y: hidden;
     display: flex;
     align-items: center;
@@ -43,6 +46,10 @@
 
     padding-right: 10px;
     padding-left: 10px;
+    /* width: max(50vw); */
+}
+.calculator .display .result{
+    overflow-x: auto;
 }
 
 .calculator .display p{
